# eleicoes2022

./: .env  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py
app/front/main/: __init__.py  views.py
app/front/main/templates/: index.html
