[tool.poetry]
name = "eleicoes2022"
version = "0.1.0"
description = ""
authors = ["Wesley Júnior <agarwesley19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = {extras = ["async"], version = "^2.2.2"}
Flask-Cors = "^3.0.10"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
